--- a/src/hibernate.properties
+++ b/src/hibernate.properties
@@ -1,6 +1,7 @@
 hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 hibernate.connection.driver_class = com.mysql.cj.jdbc.Driver
-hibernate.connection.url = jdbc:mysql://localhost:3306/orm
+hibernate.connection.url = jdbc:mysql://localhost:3306/orm2
+
 hibernate.connection.username = root
 hibernate.connection.password = harshima@123
 hibernate.show_sql = true
